# metis

./: .gitignore  BUG_LIST.md  CHANGELOG.md  Cargo.toml  README.md  tarpaulin-report.html  tarpaulin.toml
crates/metis-code-index/: Cargo.toml
crates/metis-code-index/src/: formatter.rs  hasher.rs  lib.rs  parser.rs  symbols.rs  walker.rs
crates/metis-code-index/src/lang/: go.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/metis-code-index/src/queries/: go_symbols.scm  javascript_symbols.scm  typescript_symbols.scm
crates/metis-core/: Cargo.toml
crates/metis-core/src/: context.rs  error.rs  lib.rs  render.rs  sync.rs  template.rs  updates.rs
crates/metis-core/src/database/: mod.rs  query.rs
crates/metis-core/src/migrations/: 001_initial_schema.sql
crates/metis-core/src/templates/adr/: frontmatter.yaml  postmatter.md
crates/metis-core/src/templates/initiative/: frontmatter.yaml
crates/metis-core/src/templates/strategy/: content.md  frontmatter.yaml
crates/metis-docs-cli/: Cargo.toml
crates/metis-docs-cli/.metis/: config.toml  vision.md
crates/metis-docs-cli/.metis/strategies/test-strategy/: strategy.md
crates/metis-docs-cli/src/: cli.rs  lib.rs  main.rs  workspace.rs
crates/metis-docs-cli/src/commands/: archive.rs  config.rs  flush.rs  index.rs  init.rs  list.rs  mcp.rs  mod.rs  search.rs  status.rs  sync.rs  transition.rs  tui.rs  validate.rs
crates/metis-docs-cli/src/hooks/: post-commit
crates/metis-docs-cli/tests/: comprehensive_functional_test.rs
crates/metis-docs-gui/: Cargo.toml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/metis-docs-gui/src/: App.css  App.tsx  App.tsx.bak  App.vue  lib.rs  styles.css
crates/metis-docs-gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/metis-docs-gui/src-tauri/capabilities/: default.json
crates/metis-docs-gui/src-tauri/icons/: icon.icns
crates/metis-docs-gui/src-tauri/src/: lib.rs
crates/metis-docs-gui/src/components/: BoardNavigation.tsx  BoardNavigation.tsx.bak  ConfirmDialog.tsx.bak  CreateDocumentDialog.tsx  CreateDocumentDialog.tsx.bak  CreateDocumentDialog.vue  DirectoryPicker.tsx  DocumentBoard.tsx.bak  DocumentCard.tsx  DocumentCard.tsx.bak  DocumentCard.vue  DocumentEditor.tsx.bak  DocumentTypeFilter.tsx  DocumentViewer.tsx.bak  DocumentViewer.vue  DraggableDocumentCard.tsx.bak  EmbeddedDocument.vue  EmptyState.tsx  InitProjectDialog.tsx  InitProjectDialog.vue  KanbanBoard.tsx  KanbanBoard.tsx.bak  KanbanBoard.vue  KanbanBoard.vue.old  KanbanCard.vue  KanbanColumn.tsx  KanbanColumn.tsx.bak  KanbanColumn.vue  OnboardingWizard.vue  ProjectBrowser.tsx.bak  ProjectCard.tsx  ProjectCard.tsx.bak  ProjectCard.vue  ProjectSidebar.tsx  ProjectSidebar.tsx.bak  ProjectSidebar.vue  SearchBar.vue  SettingsMenu.vue  SpecificationList.vue  SyncStatusIndicator.vue  (+8 more)
crates/metis-docs-gui/src/composables/: useProject.ts  useTheme.ts  useToolbar.ts
crates/metis-docs-gui/src/contexts/: ProjectContext.tsx  ThemeContext.tsx
crates/metis-docs-gui/src/lib/: board-config.ts  tauri-api.ts  tauri-mock.ts
crates/metis-docs-gui/src/styles/: theme.css
crates/metis-docs-gui/src/test/: setup.ts  utils.tsx
crates/metis-docs-gui/src/themes/: definitions.ts
crates/metis-docs-gui/src/types/: board.ts  theme.ts
crates/metis-docs-gui/src/utils/: drag-n-drop.ts
crates/metis-docs-mcp/: Cargo.toml  instructions.md
crates/metis-docs-mcp/src/: config.rs  error.rs  error_utils.rs  formatting.rs  lib.rs  main.rs  read_tracker.rs  server.rs
crates/metis-docs-mcp/src/tools/: all_tools.rs  archive_document.rs  check_phase_transition.rs  create_document.rs  document.rs  edit_document.rs  hello.rs  index_code.rs  initialize_project.rs  list_documents.rs  mod.rs  obsidian.rs  open_document.rs  phase.rs  project.rs  query.rs  read_document.rs  reassign_parent.rs  search_documents.rs  transition_phase.rs  update_blocked_by.rs  update_document_content.rs  update_exit_criterion.rs  validate_document.rs  validate_exit_criteria.rs
crates/metis-docs-mcp/src/viewer/: dispatcher.rs  mod.rs  sys_editor.rs  traits.rs  vscode.rs
crates/metis-docs-mcp/tests/: common.rs  comprehensive_functional_test.rs  configuration_scenarios_test.rs  error_handling_edge_cases_test.rs  error_handling_edge_cases_test.rs.disabled  exit_criteria_validation_test.rs  functional_test.rs  git_overlay_test.rs  mcp_archive_test.rs  mcp_server_integration_test.rs  mcp_workflow_test.rs  phase_transitions_test.rs  phase_transitions_test.rs.disabled  sync_integration_test.rs  test_helpers.rs.disabled
crates/metis-docs-mcp/tests/common/: mod.rs
crates/metis-docs-mcp/tests/integration/: config.rs  error.rs  main.rs  server.rs
crates/metis-docs-tui/: Cargo.toml
crates/metis-docs-tui/src/: lib.rs  main.rs
crates/metis-docs-tui/src/app/: document.rs  document.rs.bu  mod.rs  navigation.rs  navigation.rs.bu  state.rs.bu
crates/metis-docs-tui/src/error/: app_error.rs  error_handler.rs
crates/metis-docs-tui/src/models/: database.rs  kanban.rs  message.rs  mod.rs
crates/metis-docs-tui/src/services/: document.rs  document_service.rs  mod.rs  sync.rs  sync_service.rs  transition.rs  transition_service.rs  workspace.rs  workspace_service.rs
crates/metis-docs-tui/src/ui/: board.rs  components.rs  detail.rs  dialog.rs  edit.rs  message.rs  mod.rs
crates/metis-docs-tui/tests/: archive_cascade_test.rs  backlog_creation_test.rs  backlog_debug_creation_test.rs  backlog_debug_test.rs  backlog_functional_test.rs  basic_navigation.rs  complete_workflow_test.rs  comprehensive_ticket_creation_test.rs  create_strategy_test.rs  ctrl_n_interface_test.rs  ctrl_s_save_test.rs  edit_strategy_test.rs  error_handling_edge_cases_test.rs  exit_criteria_validation_test.rs  flight_level_configuration_test.rs  flight_level_creation_workflows_test.rs  flight_level_persistence_test.rs  phase_transitions_test.rs  real_tui_simulation_test.rs
crates/metis-docs-tui/tests/common/: mod.rs
crates/metis-sync/: Cargo.toml
crates/metis-sync/src/: dehydration.rs  hydration.rs  lib.rs  orchestration.rs  projection.rs  workspace.rs
(+683 files in other folders)
