[workspace]
members = [
    "crates/metis-docs-cli",
    "crates/metis-docs-core",
    "crates/metis-docs-tui",
    #"crates/metis-docs-mcp"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Dylan Storey <contact@collier.io>"]

[workspace.dependencies]
# Shared dependencies used by multiple crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.0"
tokio-test = "0.4"
chrono = { version = "0.4", features = ["serde"] }
