[package]
name = "metis-code-index"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Code indexing via tree-sitter for AI agent navigation"

[dependencies]
# Tree-sitter parsing
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"

# File walking (gitignore-aware)
ignore = "0.4"

# Iterator utilities (used by extractors)
streaming-iterator = "0.1"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Content hashing for incremental indexing
blake3 = "1"

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
