[package]
name = "metis-docs-core"
version.workspace = true
edition.workspace = true
description = "Core library for Flight Levels documentation management system"
license.workspace = true
authors.workspace = true

[dependencies]
# Shared dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Core-specific dependencies
serde_yaml = "0.9"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "migrate", "chrono", "uuid", "json"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.9"
gray_matter = "0.2"
tera = "1.19"
include_dir = "0.7"
walkdir = "2.0"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "metis_core"
path = "src/lib.rs"