[package]
name = "metis-docs-cli"
version.workspace = true
edition.workspace = true
description = "CLI for Metis document management system"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "metis"
path = "src/main.rs"

[lib]
name = "metis_docs_cli"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Local dependencies
metis-docs-core = { path = "../metis-docs-core", version = "0.9.3" }
metis-docs-mcp = { path = "../metis-docs-mcp", version = "0.9.3" }

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive", "color"] }
dialoguer = "0.11"
indicatif = "0.17"
colored = "2.0"
console = "0.15"
tabled = "0.15"

[dev-dependencies]
tempfile = "3.0"
