[package]
name = "metis-docs-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Metis documentation management system"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "metis-mcp"
path = "src/main.rs"

[dependencies]
metis-docs-core = { path = "../metis-docs-core", version = "0.2.2" }

# Shared dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP Server-specific dependencies
rust-mcp-sdk = { version = "0.5.0", default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "2025_06_18",
] }
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
clap = { version = "4.0", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

[lib]
name = "metis_mcp_server"
path = "src/lib.rs"