[package]
name = "metis-docs-mcp"
version.workspace = true
edition.workspace = true
description = "MCP server for Metis documentation management system"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "metis-mcp"
path = "src/main.rs"

[dependencies]
metis-docs-core = { path = "../metis-docs-core", version = "1.0.6" }

# Shared dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# MCP Server-specific dependencies
rust-mcp-sdk = { version = "0.7.4", git = "https://github.com/rust-mcp-stack/rust-mcp-sdk", rev = "54d0237f04befce3ce21c9d8ffe19cb567c1ffad", default-features = false, features = [
    "server",
    "macros",
    "hyper-server",
    "ssl",
    "sse",
    "stdio",
] }
# Pin hyper-util to compatible version to avoid axum-server build errors
hyper-util = "=0.1.17"
async-trait = "0.1"
futures = "0.3"
schemars = "0.8"
clap = { version = "4.0", features = ["derive", "env"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
metis-docs-core = { path = "../metis-docs-core", version = "1.0.6", features = ["test-utils"] }
tempfile = { workspace = true }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
regex = "1"

[lib]
name = "metis_mcp_server"
path = "src/lib.rs"