[package]
name = "metis-docs-tui"
version.workspace = true
edition.workspace = true
description = "Terminal User Interface for Metis document management system"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "metis-tui"
path = "src/main.rs"

[lib]
name = "metis_docs_tui"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
gray_matter = "0.2"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Local dependencies
metis-docs-core = { path = "../metis-docs-core", version = "0.6.0" }

# TUI-specific dependencies
ratatui = "0.28"
crossterm = "0.28"
tui-input = "0.10"
tui-textarea = "0.6"

[dev-dependencies]
metis-docs-core = { path = "../metis-docs-core", version = "0.6.0", features = ["test-utils"] }
tempfile = "3.0"