[package]
name = "metis-docs-gui"
version.workspace = true
description = "Multi-project GUI for Metis Flight Levels project management"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version = "1.77.2"

# Use parent workspace

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
serde_json = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
log = "0.4"
tracing = "0.1"
metis-docs-core = { path = "../../metis-docs-core", version = "1.0.8" }
tokio = { version = "1.0", features = ["rt"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
tempfile = "3.8"
anyhow = "1.0"
